# kaggle

./: .gitignore  README.md
cat-in-the-dat/: README.md  decision_tree.ipynb  ensemble_trees.ipynb  explore.ipynb  regressions.ipynb
foursquare_location_matching/: .gitignore  README.md  download_data.sh  pyproject.toml
foursquare_location_matching/data/: .gitignore  download_data.sh
foursquare_location_matching/data/kaggle/: .gitignore
foursquare_location_matching/data/kaggle_source_data/: .gitignore
foursquare_location_matching/notebooks/: eda.ipynb
foursquare_location_matching/src/mlflow_example/: .gitignore  example_mlflow.py
foursquare_location_matching/src/mlflow_example/mlruns/0/: meta.yaml
g_research_crypto_forecasting/: README.md  pyproject.toml
g_research_crypto_forecasting/EDA_notebooks/: check_splits.ipynb
g_research_crypto_forecasting/my_silly_logging/: check213.txt  current_best_logs.txt
g_research_crypto_forecasting/notebooks/: EDA.ipynb  check_splits.ipynb  lag_target_analysis.ipynb  market_features.ipynb  overview.ipynb
g_research_crypto_forecasting/src/: config.py  create_train_folds_and_test_set.py  create_train_splits_and_validation_set.py  run_submission.py  run_training.py  run_training.sh  submit.py  train.py
g_research_crypto_forecasting/src/custom_metrics/: custom_metrics.py
g_research_crypto_forecasting/src/helpers/: memory.py
g_research_crypto_forecasting/src/models/light_gbm/: feature_engineering.py  model.py  train.py  train_before.py  train_before2.py
g_research_crypto_forecasting/src/models/light_gbm_benchmark/: feature_engineering.py  model.py  train.py
g_research_crypto_forecasting/src/models/logistic_regression/: feature_engineering.py  model.py
g_research_crypto_forecasting/src/models/random_forest/: feature_engineering.py  model.py
g_research_crypto_forecasting/src/saved_models/light_gbm/: light_gbm_fold_0.joblib  light_gbm_fold_1.joblib  light_gbm_fold_2.joblib  light_gbm_fold_3.joblib  light_gbm_fold_4.joblib
international_football_results/: exploration.ipynb  pyproject.toml
international_football_results/dataset/: results_cleaned.pickle
predict-future-sales/: .gitignore  pyproject.toml
predict-future-sales/predict-future-sales/: dnn.ipynb  explore.ipynb  imputation_for_non_sold_combinations.ipynb  leaderboard.ipynb  process_data_monthly.ipynb  process_data_monthly_full_ids.ipynb  trees_on_monthly_aggregated_data.ipynb
rock-paper-scissors/ensemble_trees/: adaboost_agent.py  (+3 more)
seti_breakthrough_listen/: .gitignore  pyproject.toml
(+21 files in other folders)
