[tool.poetry]
name = "foursquare_location_matching"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"
kaggle = "^1.5.12"
mlflow = "^1.25.1"
matplotlib = "^3.5.1"
global-land-mask = "^1.0.0"
phonenumbers = "^8.12.47"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
