[tool.poetry]
name = "g_research_crypto_forecasting"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
kaggle = "^1.5.12"
tensorflow = "^2.7.0"
pandas = "^1.3.4"
scikit-learn = "^1.0.1"
jupyter = "^1.0.0"
scipy = "^1.7.2"
matplotlib = "^3.4.3"
lightgbm = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
