[tool.poetry]
name = "international_football_results"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
