[tool.poetry]
name = "predict-future-sales"
version = "0.1.0"
description = ""
authors = ["Wolfgang Spindeler <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
scipy = "^1.6.1"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
jupyter = "^1.0.0"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
